--- a/app/src/main/res/layout/activity_audio_call.xml
+++ b/app/src/main/res/layout/activity_audio_call.xml
@@ -3,80 +3,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AudioCallActivity"
     android:orientation="vertical"
-    android:background="@drawable/app_grad_vert">
+    tools:context=".AudioCallActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/love" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="@dimen/_30sdp"
-        >
+        android:orientation="vertical">
 
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="match_parent"
             android:layout_height="@dimen/_100sdp"
-            android:src="@drawable/sample_call_picker"
-            android:layout_margin="@dimen/_10sdp"/>
+            android:layout_margin="@dimen/_10sdp"
+            android:src="@drawable/sample_call_picker" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_centerVertical="true"
             android:layout_margin="@dimen/_10sdp"
             android:gravity="center"
-            android:layout_centerVertical="true">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/caller_name"
+                style="@style/TextAppearance.AppCompat.Medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
                 android:fontFamily="@font/sf_ui_medium"
                 android:text="@string/user_name_sample"
-                style="@style/TextAppearance.AppCompat.Medium"/>
+                android:textColor="@color/white" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="2"
                 android:gravity="center"
-                >
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <TextView
                     android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="London"
-                    android:fontFamily="@font/sf_ui_medium"
-                    android:textColor="@color/white"
+                    android:drawableStart="@drawable/location_white"
                     android:drawablePadding="5dp"
-                    android:drawableStart="@drawable/location_white"/>
+                    android:fontFamily="@font/sf_ui_medium"
+                    android:text="London"
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="0.5"
                     android:layout_height="wrap_content"
-                    android:text="4"
-                    android:fontFamily="@font/sf_ui_medium"
-                    android:textColor="@color/white"
+                    android:layout_weight="0.5"
+                    android:drawableStart="@drawable/thumbs_up_white"
                     android:drawablePadding="5dp"
-                    android:drawableStart="@drawable/thumbs_up_white"/>
+                    android:fontFamily="@font/sf_ui_medium"
+                    android:text="4"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_statusofCall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/waiting_for_response"
-            android:textColor="@color/white"
+
             android:textAlignment="center"
-            android:gravity="center"/>
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/mCallDuration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="00:00"
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
@@ -84,27 +99,28 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/pickup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/gender_bg_green"
             android:layout_marginBottom="@dimen/_30sdp"
+            android:background="@drawable/gender_bg_green"
+            android:elevation="@dimen/_50sdp"
             android:src="@drawable/ic_call_black_24dp"
-            android:elevation="@dimen/_50sdp"/>
+            android:visibility="gone" />
 
         <ImageButton
             android:id="@+id/hangup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/gender_bg_red"
             android:layout_marginBottom="@dimen/_30sdp"
+            android:background="@drawable/gender_bg_red"
             android:onClick="hangupAudioCall"
-            android:src="@drawable/ic_call_end_black_24dp"/>
+            android:src="@drawable/ic_call_end_black_24dp" />
 
 
     </LinearLayout>
