--- a/app/src/main/res/layout/activity_video_chat.xml
+++ b/app/src/main/res/layout/activity_video_chat.xml
@@ -3,87 +3,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VideoChatActivity"
+    tools:context=".OutGoingVideoChatActivity"
     android:orientation="vertical">
-
-    <ImageView
+    <LinearLayout
+        android:id="@+id/remoteVideo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/sample_caller"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:background="@color/dull_black"/>
+        android:background="#11F6F4F4"
+        android:orientation="horizontal" />
+    <RelativeLayout
+        android:id="@+id/localVideo"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="@dimen/_30sdp"
-        >
+        android:orientation="vertical">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_100sdp"
-        android:src="@drawable/sample_call_picker"
-        android:layout_margin="@dimen/_10sdp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/_10sdp"
-        android:gravity="center"
-        android:layout_centerVertical="true">
-
-        <TextView
-            android:id="@+id/caller_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:fontFamily="@font/sf_ui_medium"
-            android:text="@string/user_name_sample"
-            style="@style/TextAppearance.AppCompat.Medium"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_100sdp"
+            android:layout_margin="@dimen/_10sdp"
+            android:visibility="gone"
+            android:src="@drawable/sample_call_picker" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/_10sdp"
             android:gravity="center"
-            >
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:id="@+id/caller_name"
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="London"
                 android:fontFamily="@font/sf_ui_medium"
-                android:textColor="@color/white"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/location_white"/>
+                android:text="@string/user_name_sample"
+                android:textColor="@color/white" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="wrap_content"
-                android:text="4"
-                android:fontFamily="@font/sf_ui_medium"
-                android:textColor="@color/white"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/thumbs_up_white"/>
+
 
         </LinearLayout>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tv_statusofCalls"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/waiting_for_response"
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/waiting_for_response"
-        android:textColor="@color/white"
-        android:textAlignment="center"
-        android:gravity="center"/>
+        <TextView
+            android:id="@+id/mCallDurations"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="00:00"
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
@@ -91,30 +79,30 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/pickup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/gender_bg_green"
             android:layout_marginBottom="@dimen/_30sdp"
+            android:background="@drawable/gender_bg_green"
+            android:elevation="@dimen/_50sdp"
             android:src="@drawable/ic_call_black_24dp"
-            android:elevation="@dimen/_50sdp"/>
+            android:visibility="gone" />
 
         <ImageButton
             android:id="@+id/hangup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/gender_bg_red"
             android:layout_marginBottom="@dimen/_30sdp"
-            android:onClick="hangUpVideoCall"
-            android:src="@drawable/ic_call_end_black_24dp"/>
+            android:background="@drawable/gender_bg_red"
+            android:onClick="hangupAudioCall"
+            android:src="@drawable/ic_call_end_black_24dp" />
 
 
     </LinearLayout>
-
 
 </RelativeLayout>
